# atrium

./: .gitignore  README.md  meson.build  meson_options.txt
data/: atrium-greeter.conf  atrium.conf.in  atrium.service
data/pam.d/: atrium.arch  atrium.debian  atrium.fedora
doc/: architecture.md  concepts.md  implementation-plan.md  multiseat-setup.md
greeter/: greeter_config.c  greeter_config.h  main.c  ui-gtk4.c  ui.h  users.c  users.h
lib/: conf_parse.c  conf_parse.h  log.h
src/: auth.c  auth.h  bus.c  bus.h  config.h  config_file.c  config_file.h  drm.c  drm.h  event.c  event.h  greeter.c  greeter.h  log.h  main.c  meson.build  seat.c  seat.h  session.c  session.h  vt.c  vt.h
tools/: auth-test.c  config-test.c  create-greeter-user.sh  deploy.sh  greeter-test.c  uninstall.sh
